// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CumulativeRevenueChartLegend /> should render correctly 1`] = `
<Fragment>
  <ChartLegendItem
    color="#0A169A"
    label="Revenue"
  />
</Fragment>
`;

exports[`<CumulativeRevenueChartLegend /> should render correctly when projections are present 1`] = `
<Fragment>
  <ChartLegendItem
    color="#0A169A"
    label="Actual Revenue"
  />
  <ChartLegendItem
    color="#38A9DB"
    dashed={true}
    label="Projected Revenue"
  />
</Fragment>
`;
